Mantis ChangeLog

2003.09.??  -  0.18.0??

 * Fix #3310: Sorting of projects in menu bar.

2003.08.24  -  0.18.0rc1

 * Enh #0000: New config option(user_login_valid_regex): regular expression used to validate new login names
 * Enh #0000: Added error_proceed_url() to allow pages to give a url to proceed to after displaying the next error
 * Enh #0000: Implemented parameterized error messages.  Error strings are passed through sprintf() and are parameterized with the values given to error_parameters()
 * Enh #0000: Allow spaces and hyphens in login names.
 * Enh #0000: Optimized the database query in file_list_attachments() to improve performance of viewing bugs with large attachments.
 * Enh #2377: Index user names in manage user page by letters (added config option default_manage_user_prefix).
 * Enh #2517: Security Warnings [on login page if admin folder is accessible, administrator/root account enabled, or PLAIN passwords used].
 * Enh #2981: Resolution in overview (show resolution in View Bugs page).
 * Enh #3088: Show file attachment indicator on bug list page.
 * Enh #3240: Show last login date in the main page.
 * Enh #3242: Show bugnote add form before bugnotes to minimize the scroll needed to add a note.
 * Enh #3244: Add bug status to the autogenerated bug view link tooltips.
 * Enh #3272: Bugnote links in view_all_inc now are painted in a 'not visited' color when there are new notes.
 * Security Fix #0000: All bugs were displayed if "All Projects" is selected and user has access to no projects.
 * Fix #0000: Part of filenames with '-'s were being cut off.
 * Fix #0000: Improved adherance to the XHTML standard.
 * Fix #0000: A bug in the handling of the case where a user who does not have access to a private project, but has access level >= private_project_threshold.
 * Fix #0000: Problem in filtering on reporter = 'any' in the print pages.
 * Fix #2992: Unable to attach files to bugs on Windows servers with magic quotes ON.